# TPCM-generator

./: .gitignore  CLAUDE.md  Dockerfile  MediaStore.tpcm  README.md  RepoLang.ecore  Run.bat  config.py  convert_models.py  discover.py  expression_factory.py  flake.nix  generator.py  identifier.ecore  language.xtext  main.py  model_factory.py  model_generator.py  pcm.ecore  pyproject.toml  resource_environment.py  run-containers.sh  simulation.sh  std_definitions.py  stoex.ecore  test_model_factory.py  tpcm2pcm.sh  types.org  utils.py
ecores/: RepoLang.ecore  TPCM.ecore  pcm.ecore
output/: generated.tpcm  generated.xml
output/input/: generated.tpcm
src/tpcm_generator/: expression_factory.py  model_factory.py  model_generator.py  probability_factory.py  resource_environment.py  std_definitions.py  utils.py
tests/: run_tests.py  test_conversion.py  test_model_factory.py  test_model_generator.py  test_usage.py
