[project]
name = "tcpm-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincenzo Pace",email = "vincenzo.pace94@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.7, <3.13"
dependencies = [
    "pyecore (>=0.15.2,<0.16.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
