[project]
name = "tcpm-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincenzo Pace",email = "vincenzo.pace94@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = [
    "pyecore (>=0.15.2,<0.16.0)",
    "textx[cli] (>=4.1.0,<5.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.12"

