[tool.poetry]
name = "tpcm-generator"
version = "0.1.0"
description = "Generator for TPCM models"
authors = ["Vincenzo Pace <vincenzo.pace94@icloud.com>"]
readme = "README.md"
packages = [{include = "tpcm_generator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
pyecore = ">=0.15.2,<0.16.0"
textx = {version = ">=4.1.0,<5.0.0", extras = ["cli"]}

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tpcm-generator = "tpcm_generator.bin.main:main"

